@@ -1,6 +1,3 @@
-[VERSION]
-version                 = 1.1
-
 [CLIENT]
 ipaddr                  = 192.168.100.32
 iface                   = eth0
